--- a/src/XNA/FontStashSharp.FNA.csproj
+++ b/src/XNA/FontStashSharp.FNA.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\FNA\FNA.Core.csproj" />
     <ProjectReference Include="..\..\..\FNA\FNA.csproj" />
   </ItemGroup>
 </Project>
